--- a/src/main/webapp/WEB-INF/views/home.html
+++ b/src/main/webapp/WEB-INF/views/home.html
@@ -44,7 +44,7 @@
 					</a>
 					<div id="mobileLogo" style="display: none; margin: 22px 20px 20px 20px;">
 						<a href="index.html">
-							<img src="img/knd.png" alt="logo">
+							<img src="/img/knd.png" alt="logo">
 						</a>
 					</div>
 				</div>
