--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -83,6 +83,7 @@ button:focus {
 .scrollh {
 	position: relative;
 	height: 100%;
+	min-height: 810px;
 }
 
 .headermenu {
@@ -161,7 +162,7 @@ button:focus {
 	position: relative;
 }
 
-.mainmenu li:first-child a {
+.not-moving-div a {
 	padding: 5px 10px;
 	font-weight: 700;
 	background: #C69249;
