--- a/src/main/webapp/WEB-INF/views/admin/admin.html
+++ b/src/main/webapp/WEB-INF/views/admin/admin.html
@@ -82,13 +82,10 @@
 			</div>
 		</div>
 
-
-
-		<div th:insert="fragments/footer :: footer"></div>
 	</div>
 
 	<script src="https://unpkg.com/ionicons@5.0.0/dist/ionicons.js"></script>
-	<script src="js/script.js"></script>
-	<script src="js/bootstrap.min.js"></script>
+	<script src="/js/script.js"></script>
+	<script src="/js/bootstrap.min.js"></script>
 </body>
 </html>
