--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -382,13 +382,23 @@ fieldset {
 	padding: 0 30px 30px 30px;
 }
 
-.name-input {
-	width: 80%;
-	padding: 0 3px;
+#date {
+    position: relative;
+    display: block;
+    padding: 30px 16px 8px 16px;
+    box-sizing: border-box;
+}
+
+#before-date::after {
+    content: '' attr(data-dates);
+    position: absolute;
+    top: 16px;
+    left: 22px;
+    font-size: 16px;
+    display: block;
 }
 
 .manage-div {
-	width: 50%;
 	padding: 10px 0;
 }
 
@@ -796,6 +806,82 @@ fieldset {
 
 .padleft {
 	padding-left: 10px;
+}
+
+.trash-button {
+	position: absolute;
+	background: none;
+	color: red;
+	border-color: red;
+}
+
+/* Booking page */
+.dropdown-toggle-my {
+	background-color: #fff;
+	color: #000;
+	border: 1px solid rgb(133, 133, 133);
+	padding: 8px 16px;
+	border-radius: 2px;
+	font-size: 16px;
+	cursor: pointer;
+	align-items: center;
+}
+
+.dropdown-toggle-my:focus {
+	outline: none;
+	box-shadow: none;
+}
+
+.guests-inline {
+	align-items: center;
+}
+
+.guests-inline::after {
+    display: inline-block;
+    margin-left: 0.255em;
+    vertical-align: 0.255em;
+    content: "";
+    border-top: 0.3em solid;
+    border-right: 0.3em solid transparent;
+    border-bottom: 0;
+    border-left: 0.3em solid transparent;
+}
+
+.dropdown-menu {
+	margin-top: 8px;
+	padding: 8px;
+	border: 1px solid #ccc;
+	border-radius: 4px;
+	background-color: #fff;
+}
+
+.dropdown-row {
+	align-items: center;	
+}
+
+.dropdown-header-my {
+	font-size: 14px;
+	font-weight: bold;
+	margin-top: 8px;
+	margin-bottom: 4px;
+}
+
+.dropdown-item-my {
+	align-items: center;
+	justify-content: center;
+	font-size: 24px;
+	padding: 4px 8px;
+	background-color: #fff;
+	border: none;
+	cursor: pointer;
+}
+
+.dropdown-item-my:hover {
+	background-color: #f5f5f5;
+}
+
+.dropdown.open .dropdown-menu {
+  display: block;
 }
 
 @media screen and (min-width: 1468px) {
