--- a/src/main/webapp/WEB-INF/views/book.html
+++ b/src/main/webapp/WEB-INF/views/book.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="ru" xmlns:th="http://www.w3.org/1999/xhtml">
 <head th:include="fragments/head :: headFragment">
-	<title id="pageTitle">Бронирование</title>
-	<style>
-		.row {
-			margin: 0 0;
-		}
-	</style>
+<title id="pageTitle">Бронирование</title>
+<style>
+.row {
+	margin: 0 0;
+}
+</style>
 </head>
 <body>
 	<div class="wrapper">
@@ -111,20 +111,40 @@
 										<span th:text="${error}"></span>
 									</div>
 									<div class="row">
-										<div class="manage-div col-6">
-											<p>Дата заселения-выселения*:</p>
-											<input th:field="*{dates}" type='text' class="datepicker-here name-input" id="date" autocomplete="off" required="required"
-												pattern="(0[1-9]|1[0-9]|2[0-9]|3[01]).(0[1-9]|1[012]).[0-9]{4}-(0[1-9]|1[0-9]|2[0-9]|3[01]).(0[1-9]|1[012]).[0-9]{4}" placeholder="ДД.ММ.ГГГГ-ДД.ММ.ГГГГ">
+										<div class="manage-div col-md-5 col-12 px-1">
+											<label data-dates="Дата заселения-выселения*:" id="before-date" class="w-100">
+												<input th:field="*{dates}" type='text' class="datepicker-here w-100" id="date" autocomplete="off" required="required"
+													pattern="(0[1-9]|1[0-9]|2[0-9]|3[01]).(0[1-9]|1[012]).[0-9]{4}-(0[1-9]|1[0-9]|2[0-9]|3[01]).(0[1-9]|1[012]).[0-9]{4}" placeholder="ДД.ММ.ГГГГ-ДД.ММ.ГГГГ">
+											</label>
 										</div>
-										<div class="manage-div col-6">
-											<div class="d-inline-block w-100">
-												<p>Количество посетителей:</p>
-												<input th:field="*{peopleCount}" type="number" class="w-100" id="peopleCount" placeholder="Введите количество человек" required="required" pattern="[1-8]" />
+										<div class="manage-div col-md-5 col-12 px-1">
+											<div class="dropdown">
+												<button class="dropdown-toggle-my w-100" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+													<div class="d-block text-left">
+														<span>Гостей:</span>
+														<br>
+													</div>
+													<div class="d-flex justify-content-between guests-inline">
+														<span id="guestCount">1 взрослых, 0 детей</span>
+													</div>
+												</button>
+												<div class="dropdown-menu container-fluid" aria-labelledby="dropdownMenuButton">
+													<div class="row m-0 dropdown-row">
+														<h6 class="col-7 dropdown-header-my">Возрослые:</h6>
+														<button id="adultSub" class="col-2 dropdown-item-my" type="button" onclick="sub('adult')" disabled>-</button>
+														<span id="adultCount" class="col-1 dropdown-header-my">1</span>
+														<button id="adultAdd" class="col-2 dropdown-item-my" type="button" onclick="add('adult')">+</button>
+													</div>
+													<div class="row m-0 dropdown-row">
+														<h6 class="col-7 dropdown-header-my">Дети:</h6>
+														<button id="childSub" class="col-2 dropdown-item-my" type="button" onclick="sub('child')" disabled>-</button>
+														<span id="childCount" class="col-1 dropdown-header-my">0</span>
+														<button id="childAdd" class="col-2 dropdown-item-my" type="button" onclick="add('child')">+</button>
+													</div>
+												</div>
 											</div>
 										</div>
-									</div>
-									<div class="row">
-										<div class="manage-div col-12 col-md-6">
+										<div class="manage-div col-md-2 col-12 px-1">
 											<button type="button" id="stage1" disabled="disabled">Найти номера</button>
 										</div>
 									</div>
@@ -143,7 +163,71 @@
 	</div>
 
 
+	<script type="text/javascript">
+		var items = document.getElementsByClassName('dropdown-item-my');
+		for (var i = 0; i < items.length; ++i) {
+			var item = items[i];
+			item.addEventListener('click', function(event) {
+				event.stopPropagation();
+			});
+		}
 
+		function sub(type) {
+			var countElement = document.getElementById(type + 'Count');
+			var count = parseInt(countElement.innerHTML) - 1;
+			if (type === 'adult') {
+				if (count >= 1) {
+					countElement.innerHTML = count;
+				}
+				if (count == 1) {
+					document.getElementById(type + 'Sub').disabled = true;
+				}
+			} else if (type === 'child') {
+				if (count >= 0) {
+					countElement.innerHTML = count;
+				}
+				if (count == 0) {
+					document.getElementById(type + 'Sub').disabled = true;
+				}
+			}
+
+			document.getElementById(type + 'Add').disabled = false;
+			updateGuestDisplay();
+		}
+
+		function add(type) {
+			var countElement = document.getElementById(type + 'Count');
+			var count = parseInt(countElement.innerHTML) + 1;
+			if (count <= 8) {
+				countElement.innerHTML = count;
+			}
+			if (count == 8) {
+				document.getElementById(type + 'Add').disabled = true;
+			}
+
+			document.getElementById(type + 'Sub').disabled = false;
+			updateGuestDisplay();
+		}
+
+		//Обновляет количество гостей и обновляет отображение количества гостей на странице
+		function updateGuestCount(change, type) {
+			var countElement = document.getElementById(type + 'Count');
+			var count = parseInt(countElement.innerHTML) + change;
+			if (count >= 0) {
+				countElement.innerHTML = count;
+				updateGuestDisplay();
+			}
+		}
+
+		// Обновляет текст на кнопке выпадающего списка, чтобы показать выбранное количество гостей
+		function updateGuestDisplay() {
+			var guestCount = document.getElementById('guestCount');
+			var adultCount = Number(document.getElementById('adultCount').innerHTML);
+			var childCount = Number(document.getElementById('childCount').innerHTML);
+			guestCount.innerHTML = adultCount + ' взрослых, ' + childCount
+					+ ' детей';
+		}
+	</script>
 	<script src="../js/bootstrap.min.js"></script>
 	<script src="../js/script.js"></script>
 	<script src="../js/booking.js"></script>
