--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -862,6 +862,7 @@ fieldset {
 .dropdown-header-my {
 	font-size: 14px;
 	font-weight: bold;
+	padding-right: 0px;
 	margin-top: 8px;
 	margin-bottom: 4px;
 }
@@ -870,7 +871,7 @@ fieldset {
 	align-items: center;
 	justify-content: center;
 	font-size: 24px;
-	padding: 4px 8px;
+	padding-right: 13px;
 	background-color: #fff;
 	border: none;
 	cursor: pointer;
